# lisa-deskbridge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
macosx/L-ISA Deskbridge/L-ISA Deskbridge/: AppDelegate.h  AppDelegate.m  Extensions.h  Extensions.mm  FindMixerIpViewController.h  FindMixerIpViewController.mm  Log.h  Log.mm  LogViewController.h  LogViewController.m  MainViewController.h  MainViewController.mm  Settings.h  Settings.mm  main.m
macosx/L-ISA Deskbridge/L-ISA Deskbridge.xcodeproj/: project.pbxproj
macosx/L-ISA Deskbridge/L-ISA Deskbridge.xcodeproj/xcuserdata/philip.xcuserdatad/xcschemes/: xcschememanagement.plist
macosx/L-ISA Deskbridge/L-ISA Deskbridge/Base.lproj/: Main.storyboard
macosx/L-ISA Deskbridge/assets/: AppIcon.icns
macosx/L-ISA Deskbridge/cmake/: Info.plist.in
resources/SQ6/: MixingStation_AppSettings_MIDI_SQ6_L-ISA.msz
src/core/: Bridge.cpp  LisaControllerProxy.cpp  Midi.cpp  MidiClient.cpp  MidiReceiver.cpp  MidiSender.cpp  VirtualMidiDevice.cpp  log.cpp  main.cpp
src/core/bridges/: Generic.cpp  SQ.cpp  SQ6.cpp  SQMidi.cpp  SQMitm.cpp  SQmitm.cpp
src/include/lisa-deskbridge/: Bridge.h  LisaController.h  LisaControllerProxy.h  Midi.h  MidiClient.h  MidiReceiver.h  MidiSender.h  VirtualMidiDevice.h  log.h
src/include/lisa-deskbridge/bridges/: Generic.h  SQ.h  SQ6.h  SQMidi.h  SQMitm.h  SQmitm.h
src/tools/: cli.cpp
